can eat food and stops when out of bounds or hits itself...some bugs with rendering

--- a/GameStyles.css
+++ b/GameStyles.css
@@ -35,8 +35,6 @@ div.food{
     height:22px;
     background:white;
     z-index: 10;
-    left:200px;
-    top:180px;
     border: 1px solid white;
     box-sizing: border-box;
 }
